added h2 to html and css

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Bauhaus - The Movement - The Quiz </title>
 </head>
 <body>
+        <div class="image-box"> 
+        </div>
     <main>
-    <section class="image-box"> 
-
-    </section>
     <section class="quiz-box"> 
+        <h2></h2>
     <button></button>
     </section>
 </main>
