edited boxes so they are responsive

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>Bauhaus - The Movement - The Quiz </title>
 </head>
 <body>
+   <main class="container">
         <div class="image-box"> 
         </div>
-    <main>
+    
     <section class="quiz-box"> 
         <h2></h2>
+        <p></p>
     <button></button>
     </section>
 </main>
