added classes for start and end pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="main.css" rel="stylesheet" type="text/css">
-    <title>Bauhaus - The Movement - The Quiz </title>
+    <title>Bauhaus, the Movement, the Quiz</title>
 </head>
 <body>
    <main class="container">
@@ -13,7 +13,7 @@
         </div>
     
     <section class="quiz-box"> 
-        <h2></h2>
+        <h1></h1>
         <p></p>
     <button></button>
     </section>
